[build-system]

requires = ["setuptools>=68.2.2", "wheel"]

build-backend = "setuptools.build_meta"

# %%

[project]

name = "prosphera"

version = "1.0.1"

description = "Visualize Multidimensional Data on a Sphere"

readme = "README.md"

authors = [{name = "Volodymyr Holomb", email = "wldmrgml@gmail.com"}]

license = {file = "LICENSE"}

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Visualization"
]

keywords = ["visualization", "analysis", "clustering"]

dependencies = [
    "colorcet>=3.0.1",
    "matplotlib>=3.7.2",
    "numpy>=1.25.2",
    "pandas>=2.0.3",
    "plotly>=5.16.1",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.2"
]

requires-python = ">=3.9"

# %%

[project.urls]

Source = "https://github.com/woldemarg/proshpera"

Author = "https://www.linkedin.com/in/vholomb"

# %%

[tool.bumpver]

current_version = "1.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]

"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]

"src/prosphera/__init__.py" = ["{version}"]

"README.md" = [
    "{version}",
    "{pep440_version}",
]
